# agno-investment-team

./: Dockerfile  README.md  compose.yaml  example.env  how_to_use.md  pyproject.toml  requirements.txt  todo.md
agents/: committee_chair.py  financial_analyst.py  knowledge_agent.py  market_analyst.py  memo_writer.py  risk_officer.py  technical_analyst.py
app/: load_knowledge.py  main.py
db/: session.py
scripts/: diagnose_kb.py  patch_agno_openai.py  railway_up.sh  test_embed.py  test_kb_agent.py  verify_all.py
teams/: broadcast_team.py  coordinate_team.py  route_team.py  task_team.py
